package backend

import (
	"encoding/hex"
	"fmt"
	"math/big"

	sdkmath "cosmossdk.io/math"

	"cosmossdk.io/log"
	abci "github.com/cometbft/cometbft/abci/types"
	tmrpctypes "github.com/cometbft/cometbft/rpc/core/types"
	"github.com/cometbft/cometbft/types"
	dbm "github.com/cosmos/cosmos-db"
	sdk "github.com/cosmos/cosmos-sdk/types"
	"github.com/ethereum/go-ethereum/common"
	"github.com/ethereum/go-ethereum/common/hexutil"
	ethtypes "github.com/ethereum/go-ethereum/core/types"
	apptypes "github.com/mezo-org/mezod/app/abci/types"
	"github.com/mezo-org/mezod/indexer"
	"github.com/mezo-org/mezod/precompile/assetsbridge"
	"github.com/mezo-org/mezod/rpc/backend/mocks"
	rpctypes "github.com/mezo-org/mezod/rpc/types"
	mezotypes "github.com/mezo-org/mezod/types"
	bridgeabcitypes "github.com/mezo-org/mezod/x/bridge/abci/types"
	bridgetypes "github.com/mezo-org/mezod/x/bridge/types"
	evmtypes "github.com/mezo-org/mezod/x/evm/types"
	"google.golang.org/grpc/metadata"
)

func (suite *BackendTestSuite) TestGetTransactionByHash() {
	msgEthereumTx, _ := suite.buildEthereumTx()
	ethTxHash := msgEthereumTx.AsTransaction().Hash()

	txBz := suite.signAndEncodeEthTx(msgEthereumTx)
	block := &types.Block{Header: types.Header{Height: 1, ChainID: "test"}, Data: types.Data{Txs: []types.Tx{txBz}}}
	responseDeliver := []*abci.ExecTxResult{
		{
			Code: 0,
			Events: []abci.Event{
				{Type: evmtypes.EventTypeEthereumTx, Attributes: []abci.EventAttribute{
					{Key: "ethereumTxHash", Value: ethTxHash.Hex()},
					{Key: "txIndex", Value: "0"},
					{Key: "amount", Value: "1000"},
					{Key: "txGasUsed", Value: "21000"},
					{Key: "txHash", Value: ""},
					{Key: "recipient", Value: ""},
				}},
			},
		},
	}
	txHash := common.HexToHash(msgEthereumTx.Hash)

	rpcTransaction, _ := rpctypes.NewRPCTransaction(msgEthereumTx.AsTransaction(), common.Hash{}, 0, 0, big.NewInt(1), suite.backend.chainID)

	// Prepare test data for pseudo-transaction.
	event := bridgetypes.AssetsLockedEvent{
		Sequence:  sdkmath.NewInt(1),
		Recipient: "mezo1wengafav9m5yht926qmx4gr3d3rhxk50a5rzk8",
		Amount:    sdkmath.NewInt(1000000),
		Token:     common.HexToAddress("0x7d738d48b5c30f224aB86DaedE96CD95AB4854d9").Hex(),
	}
	pseudoTx, err := buildPseudoTx([]bridgetypes.AssetsLockedEvent{event})
	suite.Require().NoError(err)
	blockWithPseudoTx := &types.Block{Header: types.Header{Height: 1, ChainID: "test"}, Data: types.Data{Txs: []types.Tx{*pseudoTx}}}

	rpcPseudoTx, err := buildRPCPseudoTx(
		event,
		blockWithPseudoTx,
		pseudoTx,
		suite.backend.chainID,
	)
	suite.Require().NoError(err)
	pseudoTxHash := common.BytesToHash(pseudoTx.Hash())

	testCases := []struct {
		name         string
		registerMock func()
		block        *types.Block
		txHash       common.Hash
		expRPCTx     *rpctypes.RPCTransaction
		expPass      bool
	}{
		{
			"fail - Block error",
			func() {
				client := suite.backend.clientCtx.Client.(*mocks.Client)
				RegisterBlockError(client, 1)
			},
			block,
			txHash,
			rpcTransaction,
			false,
		},
		{
			"fail - Block Result error",
			func() {
				client := suite.backend.clientCtx.Client.(*mocks.Client)
				_, err := RegisterBlock(client, 1, txBz)
				suite.Require().NoError(err)
				RegisterBlockResultsError(client, 1)
			},
			block,
			txHash,
			nil,
			true,
		},
		{
			"pass - Base fee error",
			func() {
				client := suite.backend.clientCtx.Client.(*mocks.Client)
				queryClient := suite.backend.queryClient.QueryClient.(*mocks.EVMQueryClient)
				_, err := RegisterBlock(client, 1, txBz)
				suite.Require().NoError(err)
				_, err = RegisterBlockResults(client, 1)
				suite.Require().NoError(err)
				RegisterBaseFeeError(queryClient)
			},
			block,
			txHash,
			rpcTransaction,
			true,
		},
		{
			"pass - Transaction found and returned",
			func() {
				client := suite.backend.clientCtx.Client.(*mocks.Client)
				queryClient := suite.backend.queryClient.QueryClient.(*mocks.EVMQueryClient)
				_, err := RegisterBlock(client, 1, txBz)
				suite.Require().NoError(err)
				_, err = RegisterBlockResults(client, 1)
				suite.Require().NoError(err)
				RegisterBaseFee(queryClient, sdkmath.NewInt(1))
			},
			block,
			txHash,
			rpcTransaction,
			true,
		},
		{
			"pass - Pseudo-transaction found and returned",
			func() {
				client := suite.backend.clientCtx.Client.(*mocks.Client)
				_, err := RegisterBlock(client, 1, *pseudoTx)
				suite.Require().NoError(err)
			},
			blockWithPseudoTx,
			pseudoTxHash,
			rpcPseudoTx,
			true,
		},
	}

	for _, tc := range testCases {
		suite.Run(tc.name, func() {
			suite.SetupTest() // reset
			tc.registerMock()

			db := dbm.NewMemDB()
			suite.backend.indexer = indexer.NewKVIndexer(db, log.NewNopLogger(), suite.backend.clientCtx)
			err := suite.backend.indexer.IndexBlock(tc.block, responseDeliver)
			suite.Require().NoError(err)

			rpcTx, err := suite.backend.GetTransactionByHash(tc.txHash)

			if tc.expPass {
				suite.Require().NoError(err)
				suite.Require().Equal(rpcTx, tc.expRPCTx)
			} else {
				suite.Require().Error(err)
			}
		})
	}
}

func (suite *BackendTestSuite) TestGetTransactionsByHashPending() {
	msgEthereumTx, bz := suite.buildEthereumTx()
	rpcTransaction, _ := rpctypes.NewRPCTransaction(msgEthereumTx.AsTransaction(), common.Hash{}, 0, 0, big.NewInt(1), suite.backend.chainID)

	testCases := []struct {
		name         string
		registerMock func()
		tx           *evmtypes.MsgEthereumTx
		expRPCTx     *rpctypes.RPCTransaction
		expPass      bool
	}{
		{
			"fail - Pending transactions returns error",
			func() {
				client := suite.backend.clientCtx.Client.(*mocks.Client)
				RegisterUnconfirmedTxsError(client, nil)
			},
			msgEthereumTx,
			nil,
			true,
		},
		{
			"fail - Tx not found return nil",
			func() {
				client := suite.backend.clientCtx.Client.(*mocks.Client)
				RegisterUnconfirmedTxs(client, nil, nil)
			},
			msgEthereumTx,
			nil,
			true,
		},
		{
			"pass - Tx found and returned",
			func() {
				client := suite.backend.clientCtx.Client.(*mocks.Client)
				RegisterUnconfirmedTxs(client, nil, types.Txs{bz})
			},
			msgEthereumTx,
			rpcTransaction,
			true,
		},
	}

	for _, tc := range testCases {
		suite.Run(tc.name, func() {
			suite.SetupTest() // reset
			tc.registerMock()

			rpcTx, err := suite.backend.getTransactionByHashPending(common.HexToHash(tc.tx.Hash))

			if tc.expPass {
				suite.Require().NoError(err)
				suite.Require().Equal(rpcTx, tc.expRPCTx)
			} else {
				suite.Require().Error(err)
			}
		})
	}
}

func (suite *BackendTestSuite) TestGetTxByEthHash() {
	msgEthereumTx, bz := suite.buildEthereumTx()
	rpcTransaction, _ := rpctypes.NewRPCTransaction(msgEthereumTx.AsTransaction(), common.Hash{}, 0, 0, big.NewInt(1), suite.backend.chainID)

	testCases := []struct {
		name         string
		registerMock func()
		tx           *evmtypes.MsgEthereumTx
		expRPCTx     *rpctypes.RPCTransaction
		expPass      bool
	}{
		{
			"fail - Indexer disabled can't find transaction",
			func() {
				suite.backend.indexer = nil
				client := suite.backend.clientCtx.Client.(*mocks.Client)
				query := fmt.Sprintf("%s.%s='%s'", evmtypes.TypeMsgEthereumTx, evmtypes.AttributeKeyEthereumTxHash, common.HexToHash(msgEthereumTx.Hash).Hex())
				RegisterTxSearch(client, query, bz)
			},
			msgEthereumTx,
			rpcTransaction,
			false,
		},
	}

	for _, tc := range testCases {
		suite.Run(tc.name, func() {
			suite.SetupTest() // reset
			tc.registerMock()

			rpcTx, err := suite.backend.GetTxByEthHash(common.HexToHash(tc.tx.Hash))

			if tc.expPass {
				suite.Require().NoError(err)
				suite.Require().Equal(rpcTx, tc.expRPCTx)
			} else {
				suite.Require().Error(err)
			}
		})
	}
}

func (suite *BackendTestSuite) TestGetTransactionByBlockHashAndIndex() {
	_, bz := suite.buildEthereumTx()

	testCases := []struct {
		name         string
		registerMock func()
		blockHash    common.Hash
		expRPCTx     *rpctypes.RPCTransaction
		expPass      bool
	}{
		{
			"pass - block not found",
			func() {
				client := suite.backend.clientCtx.Client.(*mocks.Client)
				RegisterBlockByHashError(client, common.Hash{}, bz)
			},
			common.Hash{},
			nil,
			true,
		},
		{
			"pass - Block results error",
			func() {
				client := suite.backend.clientCtx.Client.(*mocks.Client)
				_, err := RegisterBlockByHash(client, common.Hash{}, bz)
				suite.Require().NoError(err)
				RegisterBlockResultsError(client, 1)
			},
			common.Hash{},
			nil,
			true,
		},
	}

	for _, tc := range testCases {
		suite.Run(tc.name, func() {
			suite.SetupTest() // reset
			tc.registerMock()

			rpcTx, err := suite.backend.GetTransactionByBlockHashAndIndex(tc.blockHash, 1)

			if tc.expPass {
				suite.Require().NoError(err)
				suite.Require().Equal(rpcTx, tc.expRPCTx)
			} else {
				suite.Require().Error(err)
			}
		})
	}
}

func (suite *BackendTestSuite) TestGetTransactionByBlockAndIndex() {
	msgEthTx, bz := suite.buildEthereumTx()

	defaultBlock := types.MakeBlock(1, []types.Tx{bz}, nil, nil)
	defaultExecTxResult := []*abci.ExecTxResult{
		{
			Code: 0,
			Events: []abci.Event{
				{Type: evmtypes.EventTypeEthereumTx, Attributes: []abci.EventAttribute{
					{Key: "ethereumTxHash", Value: common.HexToHash(msgEthTx.Hash).Hex()},
					{Key: "txIndex", Value: "0"},
					{Key: "amount", Value: "1000"},
					{Key: "txGasUsed", Value: "21000"},
					{Key: "txHash", Value: ""},
					{Key: "recipient", Value: ""},
				}},
			},
		},
	}

	txFromMsg, _ := rpctypes.NewTransactionFromMsg(
		msgEthTx,
		common.BytesToHash(defaultBlock.Hash().Bytes()),
		1,
		0,
		big.NewInt(1),
		suite.backend.chainID,
	)

	// Prepare test data for pseudo-transaction.
	event := bridgetypes.AssetsLockedEvent{
		Sequence:  sdkmath.NewInt(1),
		Recipient: "mezo1wengafav9m5yht926qmx4gr3d3rhxk50a5rzk8",
		Amount:    sdkmath.NewInt(1000000),
		Token:     common.HexToAddress("0x7d738d48b5c30f224aB86DaedE96CD95AB4854d9").Hex(),
	}
	pseudoTx, err := buildPseudoTx([]bridgetypes.AssetsLockedEvent{event})
	suite.Require().NoError(err)
	pseudoTxBlock := &types.Block{Header: types.Header{Height: 1, ChainID: "test"}, Data: types.Data{Txs: []types.Tx{*pseudoTx}}}
	rpcPseudoTx, err := buildRPCPseudoTx(
		event,
		pseudoTxBlock,
		pseudoTx,
		suite.backend.chainID,
	)
	suite.Require().NoError(err)

	testCases := []struct {
		name         string
		registerMock func()
		block        *tmrpctypes.ResultBlock
		idx          hexutil.Uint
		expRPCTx     *rpctypes.RPCTransaction
		expPass      bool
	}{
		{
			"pass - block txs index out of bound",
			func() {
				client := suite.backend.clientCtx.Client.(*mocks.Client)
				_, err := RegisterBlockResults(client, 1)
				suite.Require().NoError(err)
			},
			&tmrpctypes.ResultBlock{Block: types.MakeBlock(1, []types.Tx{bz}, nil, nil)},
			1,
			nil,
			true,
		},
		{
			"pass - Can't fetch base fee",
			func() {
				queryClient := suite.backend.queryClient.QueryClient.(*mocks.EVMQueryClient)
				client := suite.backend.clientCtx.Client.(*mocks.Client)
				_, err := RegisterBlockResults(client, 1)
				suite.Require().NoError(err)
				RegisterBaseFeeError(queryClient)
			},
			&tmrpctypes.ResultBlock{Block: defaultBlock},
			0,
			txFromMsg,
			true,
		},
		{
			"pass - Gets Tx by transaction index",
			func() {
				queryClient := suite.backend.queryClient.QueryClient.(*mocks.EVMQueryClient)
				client := suite.backend.clientCtx.Client.(*mocks.Client)
				db := dbm.NewMemDB()
				suite.backend.indexer = indexer.NewKVIndexer(db, log.NewNopLogger(), suite.backend.clientCtx)
				txBz := suite.signAndEncodeEthTx(msgEthTx)
				block := &types.Block{Header: types.Header{Height: 1, ChainID: "test"}, Data: types.Data{Txs: []types.Tx{txBz}}}
				err := suite.backend.indexer.IndexBlock(block, defaultExecTxResult)
				suite.Require().NoError(err)
				_, err = RegisterBlockResults(client, 1)
				suite.Require().NoError(err)
				RegisterBaseFee(queryClient, sdkmath.NewInt(1))
			},
			&tmrpctypes.ResultBlock{Block: defaultBlock},
			0,
			txFromMsg,
			true,
		},
		{
			"pass - returns the Ethereum format transaction by the Ethereum hash",
			func() {
				queryClient := suite.backend.queryClient.QueryClient.(*mocks.EVMQueryClient)
				client := suite.backend.clientCtx.Client.(*mocks.Client)
				_, err := RegisterBlockResults(client, 1)
				suite.Require().NoError(err)
				RegisterBaseFee(queryClient, sdkmath.NewInt(1))
			},
			&tmrpctypes.ResultBlock{Block: defaultBlock},
			0,
			txFromMsg,
			true,
		},
		{
			"pass - Pseudo-transaction",
			func() {
				client := suite.backend.clientCtx.Client.(*mocks.Client)
				_, err = RegisterBlockResults(client, 1)
				suite.Require().NoError(err)
			},
			&tmrpctypes.ResultBlock{Block: pseudoTxBlock},
			0,
			rpcPseudoTx,
			true,
		},
	}

	for _, tc := range testCases {
		suite.Run(tc.name, func() {
			suite.SetupTest() // reset
			tc.registerMock()

			rpcTx, err := suite.backend.GetTransactionByBlockAndIndex(tc.block, tc.idx)

			if tc.expPass {
				suite.Require().NoError(err)
				suite.Require().Equal(rpcTx, tc.expRPCTx)
			} else {
				suite.Require().Error(err)
			}
		})
	}
}

func (suite *BackendTestSuite) TestGetTransactionByBlockNumberAndIndex() {
	msgEthTx, bz := suite.buildEthereumTx()
	defaultBlock := types.MakeBlock(1, []types.Tx{bz}, nil, nil)
	txFromMsg, _ := rpctypes.NewTransactionFromMsg(
		msgEthTx,
		common.BytesToHash(defaultBlock.Hash().Bytes()),
		1,
		0,
		big.NewInt(1),
		suite.backend.chainID,
	)

	// Prepare test data for pseudo-transaction.
	event := bridgetypes.AssetsLockedEvent{
		Sequence:  sdkmath.NewInt(1),
		Recipient: "mezo1wengafav9m5yht926qmx4gr3d3rhxk50a5rzk8",
		Amount:    sdkmath.NewInt(1000000),
		Token:     common.HexToAddress("0x7d738d48b5c30f224aB86DaedE96CD95AB4854d9").Hex(),
	}
	pseudoTx, err := buildPseudoTx([]bridgetypes.AssetsLockedEvent{event})
	suite.Require().NoError(err)
	pseudoTxBlock := &types.Block{Header: types.Header{Height: 1, ChainID: "test"}, Data: types.Data{Txs: []types.Tx{*pseudoTx}}}

	rpcPseudoTx, err := buildRPCPseudoTx(
		event,
		pseudoTxBlock,
		pseudoTx,
		suite.backend.chainID,
	)
	suite.Require().NoError(err)

	testCases := []struct {
		name         string
		registerMock func()
		blockNum     rpctypes.BlockNumber
		idx          hexutil.Uint
		expRPCTx     *rpctypes.RPCTransaction
		expPass      bool
	}{
		{
			"fail -  block not found return nil",
			func() {
				client := suite.backend.clientCtx.Client.(*mocks.Client)
				RegisterBlockError(client, 1)
			},
			0,
			0,
			nil,
			true,
		},
		{
			"pass - returns the transaction identified by block number and index",
			func() {
				client := suite.backend.clientCtx.Client.(*mocks.Client)
				queryClient := suite.backend.queryClient.QueryClient.(*mocks.EVMQueryClient)
				_, err := RegisterBlock(client, 1, bz)
				suite.Require().NoError(err)
				_, err = RegisterBlockResults(client, 1)
				suite.Require().NoError(err)
				RegisterBaseFee(queryClient, sdkmath.NewInt(1))
			},
			0,
			0,
			txFromMsg,
			true,
		},
		{
			"pass - pseudo-transaction",
			func() {
				client := suite.backend.clientCtx.Client.(*mocks.Client)
				_, err = RegisterBlock(client, 1, *pseudoTx)
				suite.Require().NoError(err)
				_, err = RegisterBlockResults(client, 1)
				suite.Require().NoError(err)
			},
			0,
			0,
			rpcPseudoTx,
			true,
		},
	}

	for _, tc := range testCases {
		suite.Run(tc.name, func() {
			suite.SetupTest() // reset
			tc.registerMock()

			rpcTx, err := suite.backend.GetTransactionByBlockNumberAndIndex(tc.blockNum, tc.idx)
			if tc.expPass {
				suite.Require().NoError(err)
				suite.Require().Equal(rpcTx, tc.expRPCTx)
			} else {
				suite.Require().Error(err)
			}
		})
	}
}

func (suite *BackendTestSuite) TestQueryTendermintTxIndexer() {
	testCases := []struct {
		name         string
		registerMock func()
		txGetter     func(*rpctypes.ParsedTxs) *rpctypes.ParsedTx
		query        string
		expTxResult  *mezotypes.TxResult
		expPass      bool
	}{
		{
			"fail - Ethereum tx with query not found",
			func() {
				client := suite.backend.clientCtx.Client.(*mocks.Client)
				RegisterTxSearchEmpty(client, "")
			},
			func(_ *rpctypes.ParsedTxs) *rpctypes.ParsedTx {
				return &rpctypes.ParsedTx{}
			},
			"",
			&mezotypes.TxResult{},
			false,
		},
	}

	for _, tc := range testCases {
		suite.Run(tc.name, func() {
			suite.SetupTest() // reset
			tc.registerMock()

			txResults, err := suite.backend.queryTendermintTxIndexer(tc.query, tc.txGetter)

			if tc.expPass {
				suite.Require().NoError(err)
				suite.Require().Equal(txResults, tc.expTxResult)
			} else {
				suite.Require().Error(err)
			}
		})
	}
}

func (suite *BackendTestSuite) TestGetTransactionReceipt() {
	msgEthereumTx, _ := suite.buildEthereumTx()
	txHash := msgEthereumTx.AsTransaction().Hash()

	txBz := suite.signAndEncodeEthTx(msgEthereumTx)

	// Prepare test data for pseudo-transaction.
	event := bridgetypes.AssetsLockedEvent{
		Sequence:  sdkmath.NewInt(1),
		Recipient: "mezo1wengafav9m5yht926qmx4gr3d3rhxk50a5rzk8",
		Amount:    sdkmath.NewInt(1000000),
		Token:     common.HexToAddress("0x7d738d48b5c30f224aB86DaedE96CD95AB4854d9").Hex(),
	}
	pseudoTx, err := buildPseudoTx([]bridgetypes.AssetsLockedEvent{event})
	suite.Require().NoError(err)
	pseudoTxHash := common.BytesToHash(pseudoTx.Hash())
	pseudoTxBlock := &types.Block{
		Header: types.Header{Height: 1},
		Data: types.Data{
			Txs: []types.Tx{*pseudoTx},
		},
	}
	pseudoTxReceipt := buildPseudoTxReceipt(pseudoTx, pseudoTxBlock)

	testCases := []struct {
		name         string
		registerMock func()
		txHash       common.Hash
		block        *types.Block
		blockResult  []*abci.ExecTxResult
		expTxReceipt map[string]interface{}
		expPass      bool
	}{
		{
			"fail - Receipts do not match",
			func() {
				var header metadata.MD
				queryClient := suite.backend.queryClient.QueryClient.(*mocks.EVMQueryClient)
				client := suite.backend.clientCtx.Client.(*mocks.Client)
				RegisterParams(queryClient, &header, 1)
				RegisterParamsWithoutHeader(queryClient, 1)
				_, err := RegisterBlock(client, 1, txBz)
				suite.Require().NoError(err)
				_, err = RegisterBlockResults(client, 1)
				suite.Require().NoError(err)
			},
			common.HexToHash(msgEthereumTx.Hash),
			&types.Block{Header: types.Header{Height: 1}, Data: types.Data{Txs: []types.Tx{txBz}}},
			[]*abci.ExecTxResult{
				{
					Code: 0,
					Events: []abci.Event{
						{Type: evmtypes.EventTypeEthereumTx, Attributes: []abci.EventAttribute{
							{Key: "ethereumTxHash", Value: txHash.Hex()},
							{Key: "txIndex", Value: "0"},
							{Key: "amount", Value: "1000"},
							{Key: "txGasUsed", Value: "21000"},
							{Key: "txHash", Value: ""},
							{Key: "recipient", Value: "0x775b87ef5D82ca211811C1a02CE0fE0CA3a455d7"},
						}},
					},
				},
			},
			map[string]interface{}(nil),
			false,
		},
		{
			"pass - Pseudo-transaction",
			func() {
				client := suite.backend.clientCtx.Client.(*mocks.Client)
				_, err := RegisterBlock(client, 1, *pseudoTx)
				suite.Require().NoError(err)
			},
			pseudoTxHash,
			pseudoTxBlock,
			[]*abci.ExecTxResult{},
			pseudoTxReceipt,
			true,
		},
	}

	for _, tc := range testCases {
		suite.Run(tc.name, func() {
			suite.SetupTest() // reset
			tc.registerMock()

			db := dbm.NewMemDB()
			suite.backend.indexer = indexer.NewKVIndexer(db, log.NewNopLogger(), suite.backend.clientCtx)
			err := suite.backend.indexer.IndexBlock(tc.block, tc.blockResult)
			suite.Require().NoError(err)

			txReceipt, err := suite.backend.GetTransactionReceipt(tc.txHash)
			if tc.expPass {
				suite.Require().NoError(err)
				suite.Require().Equal(txReceipt, tc.expTxReceipt)
			} else {
				suite.Require().NotEqual(txReceipt, tc.expTxReceipt)
			}
		})
	}
}

func (suite *BackendTestSuite) TestGetGasUsed() {
	origin := suite.backend.cfg.JSONRPC.FixRevertGasRefundHeight
	testCases := []struct {
		name                     string
		fixRevertGasRefundHeight int64
		txResult                 *mezotypes.TxResult
		price                    *big.Int
		gas                      uint64
		exp                      uint64
	}{
		{
			"success txResult",
			1,
			&mezotypes.TxResult{
				Height:  1,
				Failed:  false,
				GasUsed: 53026,
			},
			new(big.Int).SetUint64(0),
			0,
			53026,
		},
		{
			"fail txResult before cap",
			2,
			&mezotypes.TxResult{
				Height:  1,
				Failed:  true,
				GasUsed: 53026,
			},
			new(big.Int).SetUint64(200000),
			5000000000000,
			1000000000000000000,
		},
		{
			"fail txResult after cap",
			2,
			&mezotypes.TxResult{
				Height:  3,
				Failed:  true,
				GasUsed: 53026,
			},
			new(big.Int).SetUint64(200000),
			5000000000000,
			53026,
		},
	}
	for _, tc := range testCases {
		suite.Run(fmt.Sprintf("Case %s", tc.name), func() {
			suite.backend.cfg.JSONRPC.FixRevertGasRefundHeight = tc.fixRevertGasRefundHeight
			suite.Require().Equal(tc.exp, suite.backend.GetGasUsed(tc.txResult, tc.price, tc.gas))
			suite.backend.cfg.JSONRPC.FixRevertGasRefundHeight = origin
		})
	}
}

func (suite *BackendTestSuite) TestGetPseudoTransactionResult() {
	// Data for a regular transaction.
	regularTxMsg, _ := suite.buildEthereumTx()
	regularTx := suite.signAndEncodeEthTx(regularTxMsg)

	// Data for an empty pseudo-transaction.
	emptyPseudoTx, err := buildPseudoTx([]bridgetypes.AssetsLockedEvent{})
	suite.Require().NoError(err)

	// Data for a valid pseudo-transaction.
	event := bridgetypes.AssetsLockedEvent{
		Sequence:  sdkmath.NewInt(1),
		Recipient: "mezo1wengafav9m5yht926qmx4gr3d3rhxk50a5rzk8",
		Amount:    sdkmath.NewInt(1000000),
		Token:     common.HexToAddress("0x7d738d48b5c30f224aB86DaedE96CD95AB4854d9").Hex(),
	}

	pseudoTx, err := buildPseudoTx([]bridgetypes.AssetsLockedEvent{event})
	suite.Require().NoError(err)

	extraData, err := hex.DecodeString(
		"010a650a0131122b6d657a6f3177656e6761666176396d35796874393236716d783467723364337268786b35306135727a6b381a0731303030303030222a307837643733386434386235633330663232346142383644616564453936434439354142343835346439",
	)
	suite.Require().NoError(err)

	testCases := []struct {
		name        string
		resultBlock *tmrpctypes.ResultBlock
		expTxResult *mezotypes.TxResult
	}{
		{
			"nil block result",
			nil,
			nil,
		},
		{
			"no transactions in block",
			&tmrpctypes.ResultBlock{
				Block: &types.Block{},
			},
			nil,
		},
		{
			"transaction in block is not a pseudo-transaction",
			&tmrpctypes.ResultBlock{
				Block: &types.Block{
					Data: types.Data{
						Txs: []types.Tx{regularTx},
					},
				},
			},
			nil,
		},
		{
			"transaction in block is an empty pseudo-transaction",
			&tmrpctypes.ResultBlock{
				Block: &types.Block{
					Data: types.Data{
						Txs: []types.Tx{*emptyPseudoTx},
					},
				},
			},
			nil,
		},
		{
			"transaction in block is a valid pseudo-transaction",
			&tmrpctypes.ResultBlock{
				Block: &types.Block{
					Data: types.Data{
						Txs: []types.Tx{*pseudoTx},
					},
				},
			},
			&mezotypes.TxResult{
				ExtraData: extraData,
			},
		},
	}

	for _, tc := range testCases {
		suite.Run(tc.name, func() {
			suite.SetupTest()

			txResult := suite.backend.GetPseudoTransactionResult(tc.resultBlock)
			suite.Require().Equal(tc.expTxResult, txResult)
		})
	}
}

func buildPseudoTx(events []bridgetypes.AssetsLockedEvent) (*types.Tx, error) {
	bridgeTx := bridgeabcitypes.InjectedTx{
		AssetsLockedEvents: events,
	}

	parts, err := bridgeTx.Marshal()
	if err != nil {
		return nil, err
	}

	var blockTx apptypes.InjectedTx
	blockTx.Parts = map[uint32][]byte{1: parts}

	tx, err := blockTx.Marshal()
	if err != nil {
		return nil, err
	}

	result := types.Tx(tx)
	return &result, nil
}

func buildRPCPseudoTx(
	event bridgetypes.AssetsLockedEvent,
	block *types.Block,
	tx *types.Tx,
	chainID *big.Int,
) (*rpctypes.RPCTransaction, error) {
	blockHash := common.BytesToHash(block.Hash())
	blockNumber := (*hexutil.Big)(new(big.Int).SetUint64(uint64(block.Height))) //nolint:gosec
	index := hexutil.Uint64(0)
	to := common.HexToAddress(assetsbridge.EvmAddress)
	zero := (*hexutil.Big)(new(big.Int).SetUint64(0))

	accAddress, err := sdk.AccAddressFromBech32(event.Recipient)
	if err != nil {
		return nil, err
	}
	recipient := common.BytesToAddress(accAddress)
	input, err := assetsbridge.PackEventsToInput(
		[]assetsbridge.AssetsLockedEvent{
			{
				SequenceNumber: event.Sequence.BigInt(),
				Recipient:      recipient,
				Amount:         event.Amount.BigInt(),
				Token:          common.HexToAddress(event.Token),
			},
		},
	)
	if err != nil {
		return nil, err
	}

	return &rpctypes.RPCTransaction{
		BlockHash:        &blockHash,
		BlockNumber:      blockNumber,
		GasFeeCap:        zero,
		GasPrice:         zero,
		GasTipCap:        zero,
		Hash:             common.BytesToHash(tx.Hash()),
		Input:            input,
		To:               &to,
		TransactionIndex: &index,
		Type:             2,
		Value:            zero,
		ChainID:          (*hexutil.Big)(chainID),
	}, nil
}

func buildPseudoTxReceipt(
	tx *types.Tx,
	block *types.Block,
) map[string]interface{} {
	return map[string]interface{}{
		"status":            hexutil.Uint(ethtypes.ReceiptStatusSuccessful),
		"cumulativeGasUsed": hexutil.Uint64(0),
		"logsBloom":         ethtypes.Bloom{},
		"logs":              []*ethtypes.Log{},
		"transactionHash":   common.BytesToHash(tx.Hash()),
		"contractAddress":   nil,
		"gasUsed":           hexutil.Uint64(0),
		"blockHash":         common.BytesToHash(block.Header.Hash()).Hex(),
		"blockNumber":       hexutil.Uint64(block.Height), //nolint:gosec
		"transactionIndex":  hexutil.Uint64(0),
		"from":              common.Address{},
		"to":                common.HexToAddress(assetsbridge.EvmAddress),
		"type":              hexutil.Uint(0),
	}
}

func buildPseudoTxTrace(
	event bridgetypes.AssetsLockedEvent,
) (map[string]interface{}, error) {
	zero := (*hexutil.Big)(new(big.Int).SetUint64(0))
	to := common.HexToAddress(assetsbridge.EvmAddress)
	accAddress, err := sdk.AccAddressFromBech32(event.Recipient)
	if err != nil {
		return nil, err
	}
	recipient := common.BytesToAddress(accAddress)
	input, err := assetsbridge.PackEventsToInput(
		[]assetsbridge.AssetsLockedEvent{
			{
				SequenceNumber: event.Sequence.BigInt(),
				Recipient:      recipient,
				Amount:         event.Amount.BigInt(),
				Token:          common.HexToAddress(event.Token),
			},
		},
	)
	if err != nil {
		return nil, err
	}

	return map[string]interface{}{
		"from":    common.Address{},
		"to":      &to,
		"type":    "CALL",
		"gas":     zero,
		"gasUsed": zero,
		"input":   hexutil.Bytes(input),
		"output":  "0x0000000000000000000000000000000000000000000000000000000000000001",
		"failed":  false,
	}, nil
}
